--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<br />
 		<div><a href = "https://www.google.com">This is a link to Google</a></div>
 		<br />
-		<img src = "image.png" />
+		<img src = "image.PNG" />
 		<p>
 			<div><em>Email me by clicking on</em> <a href = "#">Ashfak Uddin</a></div>
 			<div><em>Visit us at:</em></div>
 			<div><a href = "https://disneyworld.disney.go.com">Disney World</a></div>
 			<div><em>Box 678, DisneyLand</em></div>
-			<div><em>Usa</em></div>
+			<div><em>USA</em></div>
 		</p>
 	</body>
 
