--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<br />
 		<img src = "image.PNG" />
 		<p>
-			<div><em>Email me by clicking on</em> <a href = "#">Ashfak Uddin</a></div>
+			<div><em>Email me by clicking on</em> <a href = "mailto:ashmanpapet@gmail.com">Ashfak Uddin</a></div>
 			<div><em>Visit us at:</em></div>
 			<div><a href = "https://disneyworld.disney.go.com">Disney World</a></div>
-			<div><em>Box 678, DisneyLand</em></div>
+			<div><em>Box 678, Disneyland</em></div>
 			<div><em>USA</em></div>
 		</p>
 	</body>
