--- a/index2.html
+++ b/index2.html
@@ -170,12 +170,14 @@
 	<script src="https://kit.fontawesome.com/0137bf0349.js" crossorigin="anonymous"></script>
 	<body>
 		<div id = "page">
-			<ul id = "menu">
-				<li>Home</li>
-				<li>About</li>
-				<li>Book</li>
-				<li>Contact</li>
-			</ul>
+			<nav>
+				<ul id = "menu">
+					<li>Home</li>
+					<li>About</li>
+					<li>Book</li>
+					<li>Contact</li>
+				</ul>
+			</nav>
 			<iframe id = "embed" src = "index.html" title="Iframe"></iframe>
 			<div id = "pink">
 				<div id = "arial">
