--- a/project1/index.html
+++ b/project1/index.html
@@ -70,7 +70,7 @@
 			width: 28%;
 			height: auto;
 			left: 69%;
-			top: 15%;
+			top: 10%;
 			font-size: 2vw;
 			border: 2px solid red;
 			opacity: 0;			
@@ -78,6 +78,21 @@
 			color: yellow;
 			border-radius: 50px;
 			padding: 2%;
+		}
+		@media only screen and (max-width: 1200px) 
+		{
+			body 
+			{
+				background-color: lightblue;
+			}
+			#desc
+			{
+				top: 8%;
+			}
+			#content
+			{
+				top: 8%;
+			}
 		}
 	</style>
 	<script>
@@ -158,6 +173,8 @@
 		</p>
 		<p id = "hmm">Click the images to find out more!</p>
 		<p id = "content"></p>
+		<br><br>
 		<hr>
+		<div>Hi</div>
 	</body>
 </html>
