--- a/project1/index.html
+++ b/project1/index.html
@@ -94,7 +94,7 @@
 				top: 8%;
 			}
 		}
-		@media only screen and (max-width: 450px) 
+		@media only screen and (max-width: 550px) 
 		{
 			body 
 			{
@@ -193,6 +193,6 @@
 		<p id = "content"></p>
 		<br><br>
 		<hr>
-		<div>Hi</div>
+		<div>Hmm</div>
 	</body>
 </html>
