--- a/project1/index.html
+++ b/project1/index.html
@@ -191,8 +191,14 @@
 		</p>
 		<p id = "hmm">Click the images to find out more!</p>
 		<p id = "content"></p>
-		<br><br>
+		<br><br><br><br>
 		<hr>
-		<div>Hmm</div>
+		<h1>Upcoming Events</h1>
+		<p>
+			<a href = "https://10times.com/e1ss-f28g-4fx7">Conference for Pharmacy Leaders</a><br>
+			<a href = "https://10times.com/the-comatia-conference">https://10times.com/the-comatia-conference</a>
+
+		
+		</p>
 	</body>
 </html>
