--- a/project1/index.html
+++ b/project1/index.html
@@ -194,11 +194,10 @@
 		<br><br><br><br>
 		<hr>
 		<h1>Upcoming Events</h1>
-		<p>
-			<a href = "https://10times.com/e1ss-f28g-4fx7">Conference for Pharmacy Leaders</a><br>
-			<a href = "https://10times.com/the-comatia-conference">https://10times.com/the-comatia-conference</a>
-
-		
-		</p>
+		<ul>
+			<li><a href = "https://10times.com/e1ss-f28g-4fx7">Conference for Pharmacy Leaders</a></li>
+			<li><a href = "https://10times.com/the-comatia-conference">https://10times.com/the-comatia-conference</a></li>
+		</ul>
+                <div>Ho</div>
 	</body>
 </html>
