--- a/project1/index.html
+++ b/project1/index.html
@@ -198,6 +198,10 @@
 			<li><a href = "https://10times.com/e1ss-f28g-4fx7">Conference for Pharmacy Leaders</a></li>
 			<li><a href = "https://10times.com/the-comatia-conference">https://10times.com/the-comatia-conference</a></li>
 		</ul>
-                <div>Ho</div>
+                <hr>
+                <h1>Newsfeed</h1>
+                <div><i>idkiwn</i></div>
+                
+
 	</body>
 </html>
