--- a/project1/index.html
+++ b/project1/index.html
@@ -200,8 +200,13 @@
 		</ul>
                 <hr>
                 <h1>Newsfeed</h1>
-                <div><i>idkiwn</i></div>
-                
-
+                <div><i>Thomas talks up ‘phenomenal’ Pogacar as Tour de France’s Covid fears ease</i></div>
+                <p>The entire peloton of the Tour de France 
+                   tested negative for Covid-19 during the rest
+                   day on Monday as Geraint Thomas and his Ineos 
+                   Grenadiers team faced up to a near-impossible 
+                   job in containing the imperious double Tour winner, 
+                   Tadej Pogacar, in the forthcoming triptych of mountain stages.
+               </p>
 	</body>
 </html>
