--- a/project1/index.html
+++ b/project1/index.html
@@ -208,5 +208,12 @@
                    job in containing the imperious double Tour winner, 
                    Tadej Pogacar, in the forthcoming triptych of mountain stages.
                </p>
+               <figure>
+                       <img src = "phone"  />
+                       <figcaption>
+                                <a href = "tel: +1631-829-3687">Call me</a>
+                    
+                       </figcaption>         
+               </figure>
 	</body>
 </html>
