--- a/project1/index.html
+++ b/project1/index.html
@@ -215,5 +215,12 @@
                     
                        </figcaption>         
                </figure>
+               <figure>
+                       <img src = "email"  />
+                       <figcaption>
+                                <a href = "mailto:ashmanpapet@gmail.com">Email me</a>
+                    
+                       </figcaption>         
+               </figure>
 	</body>
 </html>
