--- a/project1/index.html
+++ b/project1/index.html
@@ -208,6 +208,7 @@
                    job in containing the imperious double Tour winner, 
                    Tadej Pogacar, in the forthcoming triptych of mountain stages.
                </p>
+               <hr>
                <figure>
                        <img src = "phone"  />
                        <figcaption>
@@ -219,8 +220,9 @@
                        <img src = "email"  />
                        <figcaption>
                                 <a href = "mailto:ashmanpapet@gmail.com">Email me</a>
-                    
                        </figcaption>         
                </figure>
+               <div>Please contact me if you wish to to know more!</div>
+               <hr>
 	</body>
 </html>
