--- a/project1/index.html
+++ b/project1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+W<!DOCTYPE HTML>
 <html>
 	<title>Project 1</title>
 	<style>
@@ -94,6 +94,11 @@
 				top: 8%;
 			}
 		}
+                #fixed
+                {
+                         position: fixed;
+                         bottom: 0;
+                }
 		@media only screen and (max-width: 550px) 
 		{
 			body 
@@ -224,5 +229,11 @@
                </figure>
                <div>Please contact me if you wish to to know more!</div>
                <hr>
+               <div id = "fixed">
+                       <ul id = "bottom">
+                          <li><a href = "index.html>Home</li>
+                          <li>Glaciers</li>
+                       </ul>
+               </div>
 	</body>
 </html>
