--- a/project1/index.html
+++ b/project1/index.html
@@ -231,7 +231,7 @@ W<!DOCTYPE HTML>
                <hr>
                <div id = "fixed">
                        <ul id = "bottom">
-                          <li><a href = "index.html>Home</li>
+                          <li><a href = "index.html">Home</a></li>
                           <li>Glaciers</li>
                        </ul>
                </div>
