--- a/project1/index.html
+++ b/project1/index.html
@@ -99,6 +99,15 @@ W<!DOCTYPE HTML>
                          position: fixed;
                          bottom: 0;
                 }
+                #bottom
+                {
+                     text-align: center;
+                }
+                #bottom li
+                {
+                    display: inline;
+                    font-size: 2vw;
+                }
 		@media only screen and (max-width: 550px) 
 		{
 			body 
@@ -233,6 +242,7 @@ W<!DOCTYPE HTML>
                        <ul id = "bottom">
                           <li><a href = "index.html">Home</a></li>
                           <li>Glaciers</li>
+                          <li>Contact</li>
                        </ul>
                </div>
 	</body>
