--- a/project1/index.html
+++ b/project1/index.html
@@ -101,12 +101,13 @@ W<!DOCTYPE HTML>
                 }
                 #bottom
                 {
-                     text-align: center;
+                     align: center;
                 }
                 #bottom li
                 {
                     display: inline;
                     font-size: 2vw;
+                    padding: 5%;
                 }
 		@media only screen and (max-width: 550px) 
 		{
