--- a/project1/index.html
+++ b/project1/index.html
@@ -239,7 +239,7 @@ W<!DOCTYPE HTML>
                        <ul id = "bottom">
                           <li><a href = "index.html">Home</a></li>
                           <li><a href = "hiking.html">Hiking</a></li>
-						  <li>Glaciers</li>
+                          <li><a href = "lights.html">Lights</a></li>
                           <li>Contact</li>
                        </ul>
                </div>
