--- a/assignments/assignment4/part2.html
+++ b/assignments/assignment4/part2.html
@@ -7,69 +7,68 @@
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
-		<div class="row">
+		<div class = "row">
 			<div class="col-lg-6 col- md-12 col-sm-12">
-			<div class="container p-5 pt-0 pr-0">
-			<img src = "left.jpg" class = "w-100 shadow-1-strong rounded mb-4" alt = "Boat on Calm Water" />
-			</div>
+				<div class="container p-5 pt-0 pr-0">
+					<img src = "left.jpg" class = "w-100 shadow-1-strong rounded mb-4" />
+				</div>
 			</div>
 
 			<div class="col-lg-6 col-md-12">
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="container">
+							<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+					</div>
 
-			<div class="row">
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				</div>
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+					</div>
 
-				<div class="row">
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				</div>
-
-				<div class="row">
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg"class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				<div class="col-lg-4">
-				<div class="container">
-				<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="error"/>
-				</div>
-				</div>
-				</div>
-				</div>
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg"class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="container">
+								<img src="left.jpg" class="w-100 shadow-1-strong rounded mb-4" />
+							</div>
+						</div>
+					</div>
 			</div>
+		</div>
 	</body>
 </html>
