--- a/projects/project2/index.html
+++ b/projects/project2/index.html
@@ -265,12 +265,24 @@
 		{
 			font-size: 2vw;
 		}
-		.item button
+		.item .buy
 		{
 			background-color: black;
 			color: white;
 			font-size: 1vw;
 			padding: 5%;
+		}
+		.buy:hover
+		{
+			background-color: gray;
+		}
+		.item .hidden
+		{
+			opacity: 0;
+			position: absolute;
+			bottom: -10%;
+			font-size: 1vw;
+			padding: 1%;
 		}
 		#modal
 		{
@@ -311,9 +323,50 @@
 		}
 		#modal button
 		{
+			font-size: 2vw;
 			position: absolute;
 			top: 0;
 			right: 0;
+		}
+		#footer
+		{
+			width: 100%;
+			height: 100%;
+			background-color: black;
+			color: white;
+		}
+		#top
+		{
+			width: 100%;
+			height: 80%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		#top div
+		{
+			margin: 5%;
+			font-size: 1.5vw;
+			text-align: center;
+		}
+		#connect
+		{
+			width: 100%;
+			position: absolute;
+			right: -75%;
+		}
+		#links img
+		{
+			width: 5%;
+			height: auto;
+		}
+		#end
+		{
+	
+		}
+		#end span
+		{
+			font-weight: bold;
 		}
 	</style>
 	<script>
@@ -324,7 +377,7 @@
 			document.getElementById("container").style.pointerEvents = "none";
 			console.log(ritual);
 			document.getElementById("ritual").innerHTML = ritual;
-			document.getElementById("modalimg").src = "images/item" + i + ".png"
+			document.getElementById("modalimg").src = "images/" + i + ".png"
 			console.log(name);
 			document.getElementById("name").innerHTML = name;
 			document.getElementById("quantity").innerHTML = quantity;
@@ -339,9 +392,45 @@
 			document.getElementById("container").style.pointerEvents = "auto";
 			
  		}
+		function init()
+		{
+			let e = document.getElementById(1);
+			let eh = document.getElementById("1h");
+			e.addEventListener('mouseover', function() {
+				e.style.backgroundColor = "gray";
+				eh.style.opacity = 1;
+			});
+			e.addEventListener('mouseout', function() {
+				e.style.backgroundColor = "black";
+				eh.style.opacity = 0;	
+			})
+			
+			let e1 = document.getElementById(2);
+			let eh1 = document.getElementById("2h");
+			e1.addEventListener('mouseover', function() {
+				e1.style.backgroundColor = "gray";
+				eh1.style.opacity = 1;
+			});
+			e1.addEventListener('mouseout', function() {
+				e1.style.backgroundColor = "black";
+				eh1.style.opacity = 0;	
+			})
+			let e2 = document.getElementById(3);
+			let eh2 = document.getElementById("3h");
+			e2.addEventListener('mouseover', function() {
+				e2.style.backgroundColor = "gray";
+				eh2.style.opacity = 1;
+			});
+			e2.addEventListener('mouseout', function() {
+				e2.style.backgroundColor = "black";
+				eh2.style.opacity = 0;	
+			})
+			
+			
+		}
 	</script>
 	
-	<body>
+	<body onload = "init();">
 		<div id = "modal">
 			<button onclick = "hide();">X</button>
 			<div>It's in the bag!</div>
@@ -396,7 +485,8 @@
 					<h1>Cherry Blossom Hand Lotion</h1>
 					<div class = "quantity">Body lotion, 70ml</div>
 					<div class = "price">$12.5</div>
-					<button onclick = "reveal('The Ritual of sakura', 'Cherry Blossom Hand Lotion', 'Body Lotion, 70ml', 12.5, 1);">Add to Bag</button>
+					<button id = "1h" class = "hidden">Add to cart</button>			
+					<button id = "1" class = "buy" onclick = "reveal('The Ritual of sakura', 'Cherry Blossom Hand Lotion', 'Body Lotion, 70ml', 12.5, 'item1');">Add to Bag</button>
 				</div>
 				<div class = "item">
 					<img src = "images/item2.png" />
@@ -404,7 +494,8 @@
 					<h1>Himalaya Honey Body Cream</h1>
 					<div class = "quantity">Body cream, 70ml</div>
 					<div class = "price">$7.5</div>
-					<button onclick = "reveal('The Ritual of Avurveda', 'Himalaya Honey Body Cream', 'Body Cream, 70ml', 7.5, 2);">Add to Bag</button>
+					<button id = "2h" class = "hidden">Add to cart</button>	
+					<button id = "2" class = "buy" onclick = "reveal('The Ritual of Avurveda', 'Himalaya Honey Body Cream', 'Body Cream, 70ml', 7.5, 'item2');">Add to Bag</button>
 				</div>
 				<div class = "item">
 					<img src = "images/item3.png" />
@@ -412,8 +503,84 @@
 					<h1>Organic Rice Milk Body Cream</h1>
 					<div class = "quantity">Body cream, 70ml</div>
 					<div class = "price">$10</div>
-					<button onclick = "reveal('The Ritual of sakura', 'Organic Rice Milk Body Cream', 'Body Cream, 70ml', 10, 3);">Add to Bag</button>
+					<button id = "3h" class = "hidden">Add to cart</button>
+					<button id = "3" class = "buy" onclick = "reveal('The Ritual of sakura', 'Organic Rice Milk Body Cream', 'Body Cream, 70ml', 10, 'item3');">Add to Bag</button>
 				</div>
+			</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<h1>Gift sets</h1>
+			<hr>	
+			<div id = "sale">
+				<div class = "item">
+					<img src = "images/gift_set1.png" />
+					<div class = "name">The Ritual of sakura</div>
+					<h1>Rebalancing Ritual Gift set</h1>
+					<div class = "quantity">Foaming shower gel 200ml, body scrub 125g, body cream 70ml, hand soap 300ml</div>
+					<div class = "price">$37.5</div>
+					<button id = "1h" class = "hidden">Add to cart</button>			
+					<button id = "1" class = "buy" onclick = "reveal('The Ritual of sakura', 'Rebalancing Ritual Gift set', 'Foaming shower gel 200ml, body scrub 125g, body cream 70ml, hand soap 300ml', 37.5, 'gift_set1');">Add to Bag</button>
+				</div>
+				<div class = "item">
+					<img src = "images/gift_set2.png" />
+					<div class = "name">The Ritual of sakura</div>
+					<h1>Renewing Treat Gift set</h1>
+					<div class = "quantity">Foaming shower gel 50ml, body scrub 70g, body cream 70ml, hand soap 110ml</div>
+					<div class = "price">$26.00</div>
+					<button id = "1h" class = "hidden">Add to cart</button>			
+					<button id = "1" class = "buy" onclick = "reveal('The Ritual of sakura', 'Renewing Treat Gift set', 'Foaming shower gel 50ml, body scrub 70g, body cream 70ml, hand soap 110ml', 26, 'gift_set2');">Add to Bag</button>
+				</div>
+				<div class = "item">
+					<img src = "images/gift_set3.png" />
+					<div class = "name">The Ritual of Karma</div>
+					<h1>soothing Ritual Gift set</h1>
+					<div class = "quantity">Foaming shower gel 200ml, body scrub 125g, body cream 70ml, hand soap 300ml</div>
+					<div class = "price">$37.50</div>
+					<button id = "1h" class = "hidden">Add to cart</button>			
+					<button id = "1" class = "buy" onclick = "reveal('The Ritual of Karma', 'soothing Ritual Gift set', 'Foaming shower gel 200ml, body scrub 125g, body cream 70ml, hand soap 300ml', 37.5, 'gift_set3');">Add to Bag</button>
+				</div>
+		
+			</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			
+			<div id = "footer">
+				<div id = "top">
+					<div id = "help">
+						<h1>Help</h1>
+						<div>Customer service</div>
+						<div>Live Chat</div>
+					</div>
+					<div id = "account">
+						<h1>Account</h1>
+						<div>Your Account</div>
+						<div>Order status</div>
+					</div>
+					<div id = "subscribe">
+						<h1>subscribe</h1>
+						<div>Emails</div>
+						<div>Events and store offers</div>
+					</div>
+					<div id = "member">
+						<h1>The Member Card</h1>
+						<div>Learn More</div>
+						<div>Pay My Bill</div>
+					</div>
+				</div>
+				<hr>
+				<div id = "connect">
+					<div id = "links">
+						<img src = "images/icons/facebook.png" />
+						<img src = "images/icons/twitter.png" />
+						<img src = "images/icons/youtube.png" />
+						<img src = "images/icons/instagram.png" />
+						<img src = "images/icons/pin.png" />
+					
+					</div>
+					<div>Connect with Josefina Body Care Collection</div>
+				</div>
+				<div id = "end">
+					@2021 Josefina Body Care Collection by <span>Ashfak Uddin</span>. All Rights Reserved.
+				</div>
+				
 			</div>
 		</div>
 	</body>
